[增加]首页广告

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,7 +2,7 @@
 <swiper indicator-dots autoplay interval="5000" duration="1000">
   <block wx:for="{{banner}}" wx:key="{{item.id}}">
     <swiper-item>
-      <image src="{{domian}}{{item.img}}?{{randmos}}" class="slide-image"/>
+      <image src="{{domian}}{{item.img}}?{{randmos}}" class="slide-image" />
     </swiper-item>
   </block>
 </swiper>
@@ -18,31 +18,31 @@
     <image src='/images/icon_all.png' mode='aspectFit'></image>
     <text>全部分类</text>
   </view>
-   <view bindtap='' class='func-area-li'>
+  <view bindtap='' class='func-area-li'>
     <image src='/images/icon_carticon.png' mode='aspectFit'></image>
     <text>购物车</text>
   </view>
-   <view bindtap='' class='func-area-li'>
+  <view bindtap='' class='func-area-li'>
     <image src='/images/icon_seller.png' mode='aspectFit'></image>
     <text>地址管理</text>
   </view>
-   <view bindtap='' class='func-area-li'>
+  <view bindtap='' class='func-area-li'>
     <image src='/images/icon_shopping.png' mode='aspectFit'></image>
     <text>我的钱包</text>
   </view>
-   <view bindtap='' class='func-area-li'>
+  <view bindtap='' class='func-area-li'>
     <image src='/images/icon_orders.png' mode='aspectFit'></image>
     <text>我的订单</text>
   </view>
-   <view bindtap='' class='func-area-li'>
+  <view bindtap='' class='func-area-li'>
     <image src='/images/icon_ssc.png' mode='aspectFit'></image>
     <text>我的收藏</text>
   </view>
-   <view bindtap='' class='func-area-li'>
+  <view bindtap='' class='func-area-li'>
     <image src='/images/icon_collect.png' mode='aspectFit'></image>
     <text>个人中心</text>
   </view>
-   <view bindtap='' class='func-area-li'>
+  <view bindtap='' class='func-area-li'>
     <image src='/images/icon_membericon.png' mode='aspectFit'></image>
     <text>关于我们</text>
   </view>
@@ -50,6 +50,8 @@
 </view>
 <view class='ad-list'>
   <block wx:for="{{ad}}" wx:key="{{item.id}}">
-    <view class='ad-list-img'><image src='{{domian}}{{item.img}}?{{randmos}}' mode='aspectFit'></image></view>  
+    <view class='ad-list-img'>
+      <image src='{{domian}}{{item.img}}?{{randmos}}' mode='aspectFit'></image>
+    </view>
   </block>
 </view>
