--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,63 +1,24 @@
 /**index.wxss**/
 
-.slide-image {
-  width: 750rpx;
-  height: 300rpx;
-}
-
-.view-search {
-  margin: 20rpx;
-  height: 80rpx;
-  border: 1px solid #f1f1f1;
-  border-radius: 10rpx;
-  line-height: 80rpx;
-}
-
-.view-search-bg {
-  background-color: #f9f9f9;
-  height: 80rpx;
-}
-
-.input-search {
-  font-size: 32rpx;
-  height: 80rpx;
-  padding: 0 10rpx;
-}
-
-.func-area {
-  display: flex;
-  flex-flow: wrap;
-  width: 100%;
-}
-
-.func-area .func-area-li {
-  width: 25%;
-  text-align: center;
-  margin-bottom: 30rpx;
-}
-
-.func-area .func-area-li image {
-  width: 80%;
-  margin: 0 auto;
-  height: 120rpx;
-}
-
-.func-area .func-area-li text {
-  font-size: 28rpx;
-  color: #888;
-  display: block;
-}
-
-.ad-list {
-  display: flex;
-  flex-flow: wrap;
-}
-
-.ad-list .ad-list-img {
-  width: 50%;
-}
-
-.ad-list .ad-list-img image {
-  width: 100%;
-  height: 200rpx;
-}
+.slide-image {width: 750rpx; height: 300rpx;}
+.view-search { margin: 20rpx; height: 80rpx; border: 1px solid #f1f1f1; border-radius: 10rpx; line-height: 80rpx;}
+.view-search-bg {background-color: #f9f9f9;height: 80rpx;}
+.input-search {font-size: 32rpx; height: 80rpx;padding: 0 10rpx;}
+.func-area {display: flex; flex-flow: wrap;width: 100%;}
+.func-area .func-area-li {width: 25%;text-align: center;margin-bottom: 30rpx;}
+.func-area .func-area-li image {width: 80%;margin: 0 auto;height: 120rpx;}
+.func-area .func-area-li text {font-size: 28rpx;color: #888;display: block;}
+.ad-list {display: flex;flex-flow: wrap;}
+.ad-list .ad-list-img {  width: 50%;}
+.ad-list .ad-list-img image { width: 100%; height: 200rpx;}
+.title{height: 80rpx; line-height: 80rpx; font-size: 32rpx; border-bottom: 1px solid #f1f1f1; padding-bottom: 10rpx; margin: 0 15rpx; display: flex;}
+.title .xian{ width: 8rpx;background-color: red;}
+.title .text{ margin-left: 20rpx;}
+.goods-list{display: flex; flex-wrap: wrap;}
+.goods-list-li{ width: 50%;}
+.goods-list-li image{ width: 85%;display: block; margin: 0 auto;}
+.goods-list-title{height: 80rpx;font-size: 28rpx;margin: 0 30rpx 10rpx;overflow: hidden; text-overflow:ellipsis;display:-webkit-box;  -webkit-box-orient:vertical; -webkit-line-clamp:2;  color: #888;}
+.goods-list-warp{display: flex;margin: 0 30rpx;}
+.index-price{font-size: 26rpx;color: red;width: 50%}
+.index-views{width: 50%;font-size: 24rpx;color: #999;text-align: right;}
+.index-list-box{margin-bottom: 20rpx;}
