--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,21 @@
 /**app.wxss**/
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+::-webkit-scrollbar
+{
+width: 6px;
+height: 4px;
+background-color: #ffffff;
+}
+/*定义滚动条轨道 内阴影+圆角*/
+::-webkit-scrollbar-track
+{
+-webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
+border-radius: 10px;
+background-color: #f3f3f3;
+}
+/*定义滑块 内阴影+圆角*/
+::-webkit-scrollbar-thumb
+{
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 10px rgba(0,0,0,.1);
+background-color: rgba(0, 0, 0, 0.2);
+}
