--- a/pages/category/category.wxss
+++ b/pages/category/category.wxss
@@ -1,1 +1,49 @@
 /* pages/category/category.wxss */
+.category-warp{
+  display: flex;
+  flex-direction: row;
+  flex-flow: nowrap;
+}
+
+.category-fl{
+  width: 25%;
+  background-color: #f1f1f1;
+  text-align: center;
+}
+
+.category-fl .category-fl-li{
+  height: 100rpx;
+  line-height: 100rpx;
+  font-size: 28rpx;
+  border-bottom: 1px solid #fff;
+}
+
+.category-fl .category-fl-li.active{
+  background-color: #ccc;
+  color: #fff;
+}
+
+.category-fr{
+  display: flex;
+  padding: 20rpx;
+  flex-wrap: wrap;
+}
+
+
+.category-fr-li{
+  width: 33.33%;
+  text-align: center;
+  margin-bottom: 30rpx;
+}
+
+.category-fr-li image{
+  width: 80%;
+  margin: 0 auto;
+  height: 160rpx;
+  display: block;
+}
+
+.category-fr-li text{
+  font-size: 24rpx;
+  color: #888;
+}
