--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,2 +1,17 @@
 <!--pages/cart/cart.wxml-->
-<text>pages/cart/cart.wxml</text>
+<view wx:if="{{empty}}" class='view-empty'>
+  <scroll-view scroll-y>
+    <view wx:for="{{carts}}" class='cart-list'>
+      <view class='carts-icon'>
+        <icon wx:if="{{item.selected}}" type='success' size="20"></icon>
+        <icon wx:else="{{item.selected}}" type='circle' size="20"></icon>
+      </view>
+    </view>
+  </scroll-view>
+</view>
+
+<view wx:else class='cars-no'>
+  <image src='/images/empty_cart.png' mode='aspectFit'></image>
+  <text>购物车空空如也</text>
+  <view class='btn' bindtap='clickToHome'>马上去逛逛</view>
+</view>
