--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -1,1 +1,30 @@
 /* pages/cart/cart.wxss */
+
+.cars-no{
+  text-align: center;
+}
+
+.cars-no image{
+  width: 40%;
+  display: block;
+  margin: 0 auto;
+}
+
+.cars-no text{
+  font-size: 32rpx;
+  color: #888;
+  display: block;
+}
+
+.cars-no .btn{
+  display: block;
+  width: 80%;
+  margin: 40rpx auto 0;
+  height: 100rpx;
+  line-height: 100rpx;
+  text-align: center;
+  font-size: 36rpx;
+  background-color: #1aad19;
+  color: #fff;
+  border-radius: 5px;
+}
