--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -29,7 +29,7 @@
       <text>全选</text>
       <text class='price'>￥：{{total}}（免运费）</text>
     </view>
-    <view class='button'>立即结算</view>
+    <view class='button' bindtap='topay'>立即结算</view>
   </view>
 </view>
 
