--- a/pages/order/submit/submit.wxss
+++ b/pages/order/submit/submit.wxss
@@ -1,1 +1,78 @@
 /* pages/order/submit/submit.wxss */
+
+.order-warp{
+  padding-bottom: 120rpx;
+}
+
+.goods-list{
+  display: flex;
+  flex-direction: row;
+  flex-flow: nowrap;
+  margin: 30rpx 10rpx;
+  border-bottom: 1px solid #f1f1f1;
+  padding-bottom: 30rpx;
+}
+
+.goods-list image{
+  width: 30%;
+  height: 120rpx;
+}
+
+.goods-list .goods-list-fr{
+  width: 65%;
+  margin-left: 5%;
+}
+
+.goods-list-fr .title{
+  font-size: 28rpx;
+  color: #333;
+  margin-bottom: 10rpx;
+
+}
+
+.goods-list-fr .price{
+  color: red;
+  font-size: 32rpx;
+  margin-bottom: 10rpx;
+}
+
+.goods-list-fr .num{
+  font-size: 24rpx;
+  color: #888;
+}
+
+
+.cart-footer{
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  height: 100rpx;
+  z-index: 99;
+  line-break: 100rpx;
+  background-color: #f1f1f1;
+  display: flex;
+  flex-direction: row;
+  flex-flow: nowrap;
+}
+
+.cart-footer text.price{
+  width: 70%;
+  line-height: 100rpx;
+  color: red;
+  display: block;
+}
+
+
+.cart-footer .button{
+  width: 30%;
+  line-height: 100rpx;
+  text-align: center;
+  background-color: #1aad19;
+  color: #fff;
+}
+
+.carts-footer-left text{
+  font-size: 32rpx;
+  color: #888;
+}
